--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 		<div class="div_left">
 			<div class="navigation">
-				<h2>Demo > My Story ></h2>
+				<h2>Demo > Story ></h2>
 				<h1>Love</h1>
 			</div>
 			<form action="#" method="get" id="chapter_info" class="k-form">
@@ -89,7 +89,7 @@
 				<h2>Whole Process > </h2>
 				<h1>Demo Video</h1>
 			</div>
-			<div style="margin-bottom:2rem;">
+			<div style="margin-bottom:3rem;">
 				<video width="90%" autoplay controls>
 					<source src="./resources/images/demovideo.mp4">
 				</video>
@@ -98,7 +98,7 @@
 				<h2>Whole Process > </h2>
 				<h1>Timeline (total 7h)</h1>
 			</div>
-			<div class="process_bar" style="margin-bottom:2rem;">
+			<div class="process_bar" style="margin-bottom:3rem;">
 				<div style="width:8%; background-color: #ffecc7; overflow: hidden;margin-right:0.5rem;">understand</div>
 				<div style="width:7%; background-color: #ffecc7; overflow: hidden;margin-right:0.5rem;">user flow</div>
 				<div style="width:21%; background-color: #ffecc7; overflow: hidden;margin-right:0.5rem;">wireframe</div>
@@ -116,7 +116,7 @@
 				<h2>Whole Process > </h2>
 				<h1>Userflow</h1>
 			</div>
-			<div style="margin-bottom:2rem; text-align:center;">
+			<div style="margin-bottom:3rem; text-align:center;">
 				<img src="./resources/images/flow.png" style="width:60%; height:auto;">
 			</div>
 
@@ -124,14 +124,14 @@
 				<h2>Whole Process > </h2>
 				<h1>Json file</h1>
 			</div>
-			<div style="margin-bottom:2rem; text-align:center;">
+			<div style="margin-bottom:3rem; text-align:center;">
 				<img src="./resources/images/json.png">
 			</div>
 						<div class="navigation">
 				<h2>Whole Process > </h2>
 				<h1>Wireframe for Web</h1>
 			</div>
-			<div style="margin-bottom:2rem; text-align:center;">
+			<div style="margin-bottom:3rem; text-align:center;">
 				<img src="./resources/images/wireframe.png">
 			</div>
 		</div>
